--- a/index.html
+++ b/index.html
@@ -135,8 +135,7 @@
 								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
 							</header>
 							<ul class="actions stacked">
-								<li><a href="#" class="button fit primary">Activate</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li>
+								<li><a href="mailto: sulmaesc@gmail.com" class="button fit">Contact Us</a></li>
 							</ul>
 						</div>
 					</section>
