--- a/index.html
+++ b/index.html
@@ -20,22 +20,6 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<h1><a href="index.html">Escobar Design Group - (949) 371-5583</a></h1>
-						<nav id="nav">
-							<ul>
-								<li class="special">
-									<a href="#menu" class="menuToggle"><span>Menu</span></a>
-									<div id="menu">
-										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
-											<li><a href="elements.html">Elements</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
-										</ul>
-									</div>
-								</li>
-							</ul>
-						</nav>
 					</header>
 
 				<!-- Banner -->
@@ -44,7 +28,7 @@
 							<h2>Escobar Design Group</h2>
 							<p>We provide high-level planning, analysis, and supervision of your project while balancing small but essential details to make your project magical.  It’s hard work, but we make it look easy.</p>
 							<ul class="actions special">
-								<li><a href="#" class="button primary">Contact US</a></li>
+								<li><a href="mailto: sulmaesc@gmail.com" class="button fit">Contact Us</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
