--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Escobar Design Group</h2>
-							<p>We provide high-level planning, analysis, and supervision of your project while balancing small but essential details to make your project magical.  It’s hard work, but we make it look easy.</p>
+							<p>Creating innovative interior design solution for tomorrow</p>
+							<p>Let us bring your ideas to life!</p>
 							<ul class="actions special">
 								<li><a href="mailto: sulmaesc@gmail.com" class="button fit">Contact Us</a></li>
 							</ul>
@@ -39,8 +40,7 @@
 						<div class="inner">
 							<header class="major">
 								<h2>Services</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<p></p>
 							</header>
 							<ul class="icons major">
 								<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
@@ -54,14 +54,13 @@
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Projects</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>Our Style</h2>
+								<p>Formed by a love of history, we love keeping as much of the bones of a structure as we can.  Marrying in your personality is what brings a space together.</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
+								<h2>Our approach</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 							</div>
 						</section>
