Our style, approach, network

--- a/index.html
+++ b/index.html
@@ -61,14 +61,13 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
 								<h2>Our approach</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<p>Communication is key.  We're here for whatever you need.  We will help you solidify your vision and keep in constant contact until your dream is realized!</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>Our Network</h2>
+								<p>Our network is vast!  With over 15 years of interior design experience, we know the right contractors, architects, artists, brokers to get the job done right and quickly.  We've got every step of the process covered!</p>
 							</div>
 						</section>
 					</section>
@@ -77,7 +76,7 @@
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Gallery</h2>
+								<h2>Recent work</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
 								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
 							</header>
