--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="landing is-preload">
-
 		<!-- Page Wrapper -->
 			<div id="page-wrapper">
 
@@ -53,57 +52,50 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Our Style</h2>
-								<p>Formed by a love of history, we love keeping as much of the bones of a structure as we can.  Marrying in your personality is what brings a space together.</p>
+							<div class="image"><img src="images/kitchen.jpg" alt="" /></div><div class="content">
+								<h2>Residential Design</h2>
+								<p></p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Our approach</h2>
-								<p>Communication is key.  We're here for whatever you need.  We will help you solidify your vision and keep in constant contact until your dream is realized!</p>
+							<div class="image"><img src="images/store.jpg" alt="" /></div><div class="content">
+								<h2>Commercial Design</h2>
+								<p></p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Our Network</h2>
-								<p>Our network is vast!  With over 15 years of interior design experience, we know the right contractors, architects, artists, brokers to get the job done right and quickly.  We've got every step of the process covered!</p>
+							<div class="image"><img src="images/office.jpg" alt="" /></div><div class="content">
+								<h2>Office Space Planning</h2>
+								<p></p>
 							</div>
 						</section>
+						<section class="spotlight">
+								<div class="image"><img src="images/patio.jpg" alt="" /></div><div class="content">
+									<h2>Outdoor spaces</h2>
+									<p></p>
+								</div>
+							</section>
 					</section>
 
 				<!-- Three -->
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
-							<header class="major">
-								<h2>Recent work</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
-							</header>
 							<ul class="features">
-								<li class="icon fa-paper-plane">
-									<h3>Arcu accumsan</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li class="icon fa-heart">
+									<h3>Our Style</h3>
+									<p>Formed by a love of history, we love keeping as much of the bones of a structure as we can.  Marrying in your personality is what brings a space together.</p>
 								</li>
-								<li class="icon solid fa-laptop">
-									<h3>Ac Augue Eget</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li class="icon solid fa-flag">
+									<h3>Our approach</h3>
+									<p>Communication is key.  We're here for whatever you need.  We will help you solidify your vision and keep in constant contact until your dream is realized!</p>
 								</li>
 								<li class="icon solid fa-code">
-									<h3>Mus Scelerisque</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+										<h2>Our Network</h2>
+										<p>Our network is vast!  With over 15 years of interior design experience, we know the right contractors, architects, artists, brokers to get the job done right and quickly.  We've got every step of the process covered!</p>
 								</li>
-								<li class="icon solid fa-headphones-alt">
-									<h3>Mauris Imperdiet</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-heart">
-									<h3>Aenean Primis</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-flag">
-									<h3>Tortor Ut</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li class="icon solid fa-code">
+										<h2>Our Philosophy</h2>
+										<p></p>
 								</li>
 							</ul>
 						</div>
@@ -114,7 +106,7 @@
 						<div class="inner">
 							<header>
 								<h2>Who we are</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
+								<p>Sulma Escobar has over 15 years of design experience.  She completed her Interior Design degree in Canada and has designed residential, commercial, office spaces all over the world.</p>
 							</header>
 							<ul class="actions stacked">
 								<li><a href="mailto: sulmaesc@gmail.com" class="button fit">Contact Us</a></li>
@@ -131,6 +123,11 @@
 							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 							<li><a href="mailto: sulmaesc@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
+						<ul class="copyright">
+								<li>Located in Beautiful Southern California</li>
+								<li>949-371-5583</li>
+								<li><a href="mailto: sulmaesc@gmail.com">sulmaesc@gmail.com</a></li>
+							</ul>
 						<ul class="copyright">
 							<li>&copy; Escobar Design Group</li>
 						</ul>
