--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 								<p>Sulma Escobar has over 15 years of design experience.  She completed her Interior Design degree in Canada and has designed residential, commercial, office spaces all over the world.</p>
 							</header>
 							<ul class="actions stacked">
-								<li><a href="mailto: sulmaesc@gmail.com" class="button fit">Contact Us</a></li>
+								<li><a href="mailto: sulma@escobardesigngroup.com" class="button fit">Contact Us</a></li>
 							</ul>
 						</div>
 					</section>
@@ -121,12 +121,12 @@
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="mailto: sulmaesc@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="mailto: sulma@escobardesigngroup.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
 								<li>Located in Beautiful Southern California</li>
 								<li>949-371-5583</li>
-								<li><a href="mailto: sulmaesc@gmail.com">sulmaesc@gmail.com</a></li>
+								<li><a href="mailto: sulma@escobardesigngroup.com">sulma@escobardesigngroup.com</a></li>
 							</ul>
 						<ul class="copyright">
 							<li>&copy; Escobar Design Group</li>
