--- a/index.html
+++ b/index.html
@@ -120,12 +120,12 @@
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 							<li><a href="mailto: sulma@escobardesigngroup.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
 								<li>Located in Beautiful Southern California</li>
-								<li>949-371-5583</li>
+								
+								<li><a href="tel:949-371-5583">949-371-5583</a></li>
 								<li><a href="mailto: sulma@escobardesigngroup.com">sulma@escobardesigngroup.com</a></li>
 							</ul>
 						<ul class="copyright">
