--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 								</li>
 								<li class="icon solid fa-code">
 										<h2>Our Philosophy</h2>
-										<p></p>
+										<p>We believe our homes should be our place of comfort that supports who we are and how we want to live.  A place where we can be relaxed and at ease regardless of who we are with.  We take a space and make it a home suitable for your family.</p>
 								</li>
 							</ul>
 						</div>
