--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 								<li><a href="mailto: sulmaesc@gmail.com" class="button fit">Contact Us</a></li>
 							</ul>
 						</div>
-						<a href="#one" class="more scrolly">Learn More</a>
+						<a href="#two" class="more scrolly">Learn More</a>
 					</section>
-
-				<!-- One -->
+<!-- 
+				
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
@@ -47,14 +47,14 @@
 								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
 							</ul>
 						</div>
-					</section>
+					</section> -->
 
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image"><img src="images/kitchen.jpg" alt="" /></div><div class="content">
 								<h2>Residential Design</h2>
-								<p></p>
+								<p>Home remodeling is a great way to add functionality to your home and increase its market value and curb appeal. We can do it all if it is in your house.  Kitchen, bathroom, living room, and even the garage remodeling.  We take your space and make it a home.</p>
 							</div>
 						</section>
 						<section class="spotlight">
