--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/store.jpg" alt="" /></div><div class="content">
 								<h2>Commercial Design</h2>
-								<p>Got an idea for a new business?  Renovating an existing one?  Our designers are up to date on all the commercial design trends and can make your space welcoming to customers.</p>
+								<p>Got an idea for a new business?  Renovating an existing one?  Our designers are up to date on all the commercial design trends and can make your space welcoming to customers.  We specialize in welcoming spaces and blending online storefronts with concrete ones to produce a memorable experience.</p>
 							</div>
 						</section>
 						<section class="spotlight">
