--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Escobar Design Group - (949) 371-5583</a></h1>
+						<h1><a href="tel:949-371-5583">Escobar Design Group - (949) 371-5583</a></h1>
 					</header>
 
 				<!-- Banner -->
@@ -28,7 +28,7 @@
 							<p>Creating innovative interior design solution for tomorrow</p>
 							<p>Let us bring your ideas to life!</p>
 							<ul class="actions special">
-								<li><a href="mailto: sulmaesc@gmail.com" class="button fit">Contact Us</a></li>
+								<li><a href="mailto: sulma@escobardesigngroup.com" class="button fit">Contact Us</a></li>
 							</ul>
 						</div>
 						<a href="#two" class="more scrolly">Learn More</a>
@@ -66,7 +66,7 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/office.jpg" alt="" /></div><div class="content">
 								<h2>Office Space Planning</h2>
-								<p></p>
+								<p>Our team has years of experience creating the ultimate office space for teams.  We work with you to understand how your team works, watch how they interact, and then build a space the can help deliver!</p>
 							</div>
 						</section>
 						<section class="spotlight">
