Update outdoor spaces

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 						<section class="spotlight">
 								<div class="image"><img src="images/patio.jpg" alt="" /></div><div class="content">
 									<h2>Outdoor spaces</h2>
-									<p></p>
+									<p>California has the best outdoor season anywhere.  We make your space work year round whether you are entertaining or just relaxing with a book in your own backyard.  Let us work with you to achieve bliss in your own personal space.</p>
 								</div>
 							</section>
 					</section>
